# ai-provenance

./: .gitignore  .requirements-mapping.yaml  CLAUDE.md  CONTRIBUTING.md  GOALS.md  INTEGRATION.md  INTEGRATION_TODO.md  INTEGRATION_v2.md  LICENSE  OVERVIEW.md  PROMPT_HISTORY.md  README.md  REQUIREMENTS.md  pyproject.toml  requirements.yaml
.ai-prov/: features.json
.ai-prov/requirements/: SPEC-001-git-native.json  SPEC-002-requirements-management.json
.claude/commands/: doc.md
.claude/skills/: ai-provenance.md
.standards/: CODING_STANDARDS.md  CONVENTIONS.md  REVIEW_CHECKLIST.md  TESTING_PROCEDURES.md
docs/: REQUIREMENTS_WORKFLOW.md  WALKTHROUGH.md
docs/guides/: index.html  requirements-workflow.html  user-guide.html  walkthrough.html
examples/: README.md  sample_project.py
examples/hello-world/.claude/commands/: req.md  stamp.md  trace.md
examples/hello-world/.standards/: CODING_STANDARDS.md
helper/: generate_docs.py
hooks/: commit-msg  post-commit  pre-commit  pre-push
specs/features/: FEAT-001-core-tracking.md
specs/requirements/: SPEC-001-git-native.md  SPEC-002-requirements-management.md
src/ai_provenance/: __init__.py  requirements.py
src/ai_provenance/ci_templates/: README.md  github-actions.yml  gitlab-ci.yml
src/ai_provenance/cli/: __init__.py  main.py
src/ai_provenance/core/: __init__.py  features.py  models.py
src/ai_provenance/git_integration/: __init__.py  commit.py  init.py  notes.py
src/ai_provenance/parsers/: __init__.py  stamper.py
src/ai_provenance/prompts/: __init__.py  models.py  storage.py
src/ai_provenance/reporters/: __init__.py  file_report.py  query.py  traceability.py  validator.py
src/ai_provenance/requirements/: manager.py  templates.py
src/ai_provenance/requirements_OLD_BACKUP/: __init__.py  manager.py  models.py
src/ai_provenance/requirements_OLD_BACKUP/templates/: ieee830.md
src/ai_provenance/wizard/: __init__.py  analyzer.py  prompts.py  structure.py
tests/: __init__.py  test_core_models.py
